; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_iwarp.c_ecore_iwarp_ll2_post_rx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_iwarp.c_ecore_iwarp_ll2_post_rx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { i32 }
%struct.ecore_iwarp_ll2_buff = type { i64, i32, i32 }

@.str = private unnamed_addr constant [54 x i8] c"Failed to repost rx buffer to ll2 rc = %d, handle=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ecore_hwfn*, %struct.ecore_iwarp_ll2_buff*, i32)* @ecore_iwarp_ll2_post_rx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecore_iwarp_ll2_post_rx(%struct.ecore_hwfn* %0, %struct.ecore_iwarp_ll2_buff* %1, i32 %2) #0 {
  %4 = alloca %struct.ecore_hwfn*, align 8
  %5 = alloca %struct.ecore_iwarp_ll2_buff*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %4, align 8
  store %struct.ecore_iwarp_ll2_buff* %1, %struct.ecore_iwarp_ll2_buff** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load %struct.ecore_iwarp_ll2_buff*, %struct.ecore_iwarp_ll2_buff** %5, align 8
  %11 = getelementptr inbounds %struct.ecore_iwarp_ll2_buff, %struct.ecore_iwarp_ll2_buff* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.ecore_iwarp_ll2_buff*, %struct.ecore_iwarp_ll2_buff** %5, align 8
  %14 = getelementptr inbounds %struct.ecore_iwarp_ll2_buff, %struct.ecore_iwarp_ll2_buff* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = trunc i64 %15 to i32
  %17 = load %struct.ecore_iwarp_ll2_buff*, %struct.ecore_iwarp_ll2_buff** %5, align 8
  %18 = call i32 @ecore_ll2_post_rx_buffer(%struct.ecore_hwfn* %8, i32 %9, i32 %12, i32 %16, %struct.ecore_iwarp_ll2_buff* %17, i32 1)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %7, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %44

21:                                               ; preds = %3
  %22 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @DP_NOTICE(%struct.ecore_hwfn* %22, i32 0, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i32 %23, i32 %24)
  %26 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %27 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.ecore_iwarp_ll2_buff*, %struct.ecore_iwarp_ll2_buff** %5, align 8
  %30 = getelementptr inbounds %struct.ecore_iwarp_ll2_buff, %struct.ecore_iwarp_ll2_buff* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.ecore_iwarp_ll2_buff*, %struct.ecore_iwarp_ll2_buff** %5, align 8
  %33 = getelementptr inbounds %struct.ecore_iwarp_ll2_buff, %struct.ecore_iwarp_ll2_buff* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 8
  %35 = load %struct.ecore_iwarp_ll2_buff*, %struct.ecore_iwarp_ll2_buff** %5, align 8
  %36 = getelementptr inbounds %struct.ecore_iwarp_ll2_buff, %struct.ecore_iwarp_ll2_buff* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = call i32 @OSAL_DMA_FREE_COHERENT(i32 %28, i32 %31, i32 %34, i64 %37)
  %39 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %4, align 8
  %40 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.ecore_iwarp_ll2_buff*, %struct.ecore_iwarp_ll2_buff** %5, align 8
  %43 = call i32 @OSAL_FREE(i32 %41, %struct.ecore_iwarp_ll2_buff* %42)
  br label %44

44:                                               ; preds = %21, %3
  %45 = load i32, i32* %7, align 4
  ret i32 %45
}

declare dso_local i32 @ecore_ll2_post_rx_buffer(%struct.ecore_hwfn*, i32, i32, i32, %struct.ecore_iwarp_ll2_buff*, i32) #1

declare dso_local i32 @DP_NOTICE(%struct.ecore_hwfn*, i32, i8*, i32, i32) #1

declare dso_local i32 @OSAL_DMA_FREE_COHERENT(i32, i32, i32, i64) #1

declare dso_local i32 @OSAL_FREE(i32, %struct.ecore_iwarp_ll2_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
